# karmaspark

./: .env.example  .gitignore  Cargo.toml  README.md  karmaspark.db
scripts/: setup_bot.sh
src/: agent.rs  config.rs  llm.rs  main.rs  memory.rs
src/commands/: ask.rs  echo.rs  memory.rs  mod.rs  moderate.rs  remindme.rs  summarize.rs
src/src/: main.rs
