[package]
name = "karmaspark"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.75"
axum = "0.8.0"
candid = "0.10.10"
dotenv = "0.15.0"
ic-agent = "0.39.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.20"
tower-http = { version = "0.6.0", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
oc_bots_sdk = { git = "https://github.com/open-chat-labs/open-chat-bots.git", rev = "874641f68a037476f645f41934716f8547289d56" }
oc_bots_sdk_offchain = { git = "https://github.com/open-chat-labs/open-chat-bots.git", rev = "874641f68a037476f645f41934716f8547289d56" }
reqwest = { version = "0.12.15", features = ["json", "native-tls"] }

# Memory and vector storage
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "sqlite"] }
rusqlite = { version = "0.30.0", features = ["chrono"] }

# Language model integrations
async-openai = "0.14.3"

# Utils
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0.51"
anyhow = "1.0.76"
once_cell = "1.19.0"
regex = "1.10.2"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
rand = "0.8.5"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
debug = false